# arduinoPlayground

ColorTesting/: ColorTesting.ino
RainbowCycle/: RainbowCycle.ino
circuits.io/: fourPixelRainbowColorRotate.txt
fourPixelSimpleRainbow/: fourPixelSimpleRainbow.ino
fourPixelUnisonRainbowFade/: fourPixelUnisonRainbowFade.ino
myLibraries/: CMakeCache.txt  Makefile  a.out  cmake_install.cmake
myLibraries/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
myLibraries/RGBColorFade/: CMakeLists.txt  buildRun.sh
myLibraries/RGBColorFade.build/Debug/ALL_BUILD.build/: Script-5E75DA9713FD4C62A2F98937.sh  dgph  dgph~
myLibraries/RGBColorFade.build/Debug/ZERO_CHECK.build/: Script-97C979167FB44D9AB8825C13.sh  dgph  dgph~
myLibraries/RGBColorFade.xcodeproj/: project.pbxproj
myLibraries/RGBColorFade/demo/: CMakeLists.txt
myLibraries/RGBColorFade/include/: Rainbow.hpp
myLibraries/RGBColorFade/lib/: CMakeCache.txt
myLibraries/RGBColorFade/src/: CMakeLists.txt  RGBColorFader.cpp  RGBColorFader.hpp  RgbPixelColor.cpp  RgbPixelColor.hpp
myLibraries/RGBColorFade/test/: CMakeLists.txt  RgbPixelColorTest.cc  TestColorFader.cpp  helloTest.cc
myLibraries/a.out.dSYM/Contents/Resources/DWARF/: a.out
myLibraries/src/: Makefile
myLibraries/src/CMakeScripts/: RGBColorFade_postBuildPhase.make
myLibraries/test/: Makefile
myLibraries/test/CMakeScripts/: faderTests_postBuildPhase.make
myLibraries/test/Debug/: faderTests
pillarconRainbow/: pillarconRainbow.ino
(+13 files in other folders)
